--- a/views/signup.html
+++ b/views/signup.html
@@ -9,7 +9,7 @@
   <body>
     <h1>Sign Up</h1>
 
-    <form method="post" action="/signup">
+    <form method="post" action="/users/signup">
       <input required name="email" type="email" placeholder="Email" />
       <input required name="password" type="password" placeholder="Password" />
 
