--- a/views/login.html
+++ b/views/login.html
@@ -9,7 +9,7 @@
   <body>
     <h1>Login</h1>
 
-    <form method="post" action="/login">
+    <form method="post" action="/users/login">
       <input required name="email" type="email" placeholder="Email" />
       <input required name="password" type="password" placeholder="Password" />
 
